# optimal-loc

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
optimal-loc/: README.rst  pyproject.toml
optimal-loc/optimal_loc/: optimal_loc.py
optimal_loc/: __init__.py  app.py  app_constants.py  bash_command.py  constants.py  optimal_loc.py  st_app.py
